--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -1,6 +1,15 @@
 
-.Card {
+.card {
   color: #F18F01;
-  height:  100%;
-  background-repeat:  no-repeat;
+  width: 100%;
+  height: 150px;
+  margin: 0 20px 20px 0;
+  padding: 10px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  border: 1px solid black;
+}
+
+.cardTitle {
+  text-align: center;
 }
